resources/less/virkailija-application.less
/* ... */
.application-handling__filter-state-selection {
  border-radius: 3px;
  position: absolute;
  z-index: 10;
  top: 30px;
  left: -56px;
  text-align: start;
  background-color: white;
  min-width: 240px;
  padding: 11px 0 12px 1px;
  box-shadow: @modal-shadow;
  font-size: 13px;
  overflow: hidden;
  line-height: 21px;
}

.application-handling__filter-state-selection-row {
  color: @gray;
  margin-left: 9px;
  margin-right: 9px;
  padding-bottom: 4px;
}

.application-handling__filter-state-selection-row * {
  cursor: pointer;
}

.application-handling__filter-state-selection-row-checkbox {
  margin-bottom: 5px;
  margin-right: 7px;
}

.application-handling__filter-state-selection-row--all {
  margin-bottom: 6px;
  border-bottom: 1px solid @separator-color;
}

.application-handling__filter-state-selection-row.application-handling__filter-state-selected-row {
  color: #06526B;
}

.application-handling__filter-state-selection-arrow-up {
  top: 15px;
  width: 21px;
  height: 15px;
  position: absolute;
  overflow: hidden;
  z-index: 11;
}

.application-handling__filter-state-selection-arrow-up:after {
  content: "";
  position: absolute;
  width: 10px;
  height: 10px;
  background: white;
  transform: rotate(135deg);
  top: 10px;
  left: 7px;
  box-shadow: 0px -1px 3px #b3b3b3;
}

.application-handling__list {
  cursor: pointer;
  overflow: auto;
  max-height: 120px;
  margin-bottom: 15px;
}

.application-handling__list--expanded {
  max-height: none;
}

.application-handling__list-row {
  padding: 7px 8px 8px 8px;
  margin: 0;
  display: block;
  font-size: 15px;
  line-height: 15px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  overflow-x: hidden;
  border-bottom: 1px solid @review-separator-color;

  .application-handling__list-row--applicant-unknown {
    color: gray;
  }
}

.application-handling__list-row:hover {
  background: #f5f5f5;
  border-radius: 3px;
}

.application-handling__list-header {
  color: #5E5E5E;
  font-size: 14px;
  overflow-x: visible;
}

.application-handling__list-row--inactivated {
  filter: grayscale(100%) opacity(55%);
  background-color: @light-gray;
}

.application-handling__list-row--selected, .application-handling__list-row--selected:hover {
  border-radius: 3px;
  background-color: @application-form-list-background-color;
}

.application-handling__list-header:hover {
  background: none;
}

.application-handling__sort-arrow {
  color: @blue-text-color;
  font-weight: bold;
  margin-left: 5px;
  cursor: pointer;
}

.application-handling__basic-list-basic-column-header {
  color: @blue-text-color;
  cursor: pointer;
}

.application-handling__list-row--applicant {
  width: 30%;
  display: inline-block;
}

.application-handling__list-row--time {
  width: 35%;
  display: inline-block;
  color: @sg-color-gray-2;
}

.application-handling__list-row--time-day {
  width: 25px;
  display: inline-block;
}

.application-handling__list-row--state {
  width: 20%;
  display: inline-block;
  margin-left: -3px;
}

.application-handling__list-row--selection {
  width: 15%;
  display: inline-block;
  margin-left: -3px;
}

.application-handling__list-row-email-icon {
  margin-left: 10px;
}

.application-handling__list-row-email-icon--not-selected {
  color: @blue-text-color;
}

.application-handling__list-row-hakukohde {
  padding-bottom: 2px;
  margin-top: 1px;
}

.application-handling__list-row-hakukohde:hover .application-handling__application-hakukohde-cell {
  filter: brightness(75%);
}

.application-handling__application-hakukohde-cell--selected {
  text-decoration: underline;
}

.application-handling__application-hakukohde-cell--form {
  margin-top: -20px;
}

.application-handling__list-row-hakukohde:hover .application-handling__hakukohde-state,
.application-handling__list-row-hakukohde:hover .application-handling__hakukohde-selection {
  filter: brightness(115%);
}

.application-handling__list-loading-indicator {
  text-align: center;
  width: 100%;
  margin-top: 40px;
  margin-bottom: 1000px;
}

.application-handling__list-loading-indicator > i {
  font-size: 50px;
  .spin
}

.application-handling__detail-container {
  position: relative;
  padding: 20px 85px 15px 85px;
}

.application-handling__review-area {
  display: flex;
  min-height: 1200px; // floating review bar must be shorter than review area
}

.application-handling__review-outer {
  position: relative;
  margin-left: 35px;
}

.application-handling__review-outer-floating {
  position: fixed;
  top: 43px;
  right: 85px;
  padding-bottom: 100px;
  overflow-y: scroll;
  height: 100%;
}

.application-handling__review-settings {
  border: 1px solid @review-separator-color;
  border-radius: 3px;
  background-color: rgba(255, 255, 255, 0.5);
  position: absolute;
  top: -34px;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1;
  pointer-events: none;
}

.application-handling__review-settings-floating {
  position: fixed;
  left: auto;
  bottom: auto;
  top: 43px;
  right: 85px;
  height: 100%;
  width: 448px;
}

.application-handling__review-settings-header {
  position: absolute;
  top: 5px;
  left: 15px;
  display: flex;
  flex-flow: row nowrap;
  align-items: center;
}

.application-handling__review-settings-header-icon {
  font-size: 24px;
}

.application-handling__review-settings-header-text {
  margin-left: 10px;
  font-size: 14px;
  text-transform: uppercase;
}

.application-handling__review-settings-indicator-outer {
  position: absolute;
  border-left: 14px solid transparent;
  border-right: 14px solid transparent;
  border-bottom: 12px solid @review-separator-color;
  right: 23px;
  top: -12px;
}

.application-handling__review-settings-indicator-inner {
  position: absolute;
  border-left: 12px solid transparent;
  border-right: 12px solid transparent;
  border-bottom: 10px solid white;
  top: 2px;
  left: -12px;
}
/* ... */

